@@ -13,6 +13,9 @@
  * RCS: @(#) $Id$
  */
 
+/* Make sure this file is never compiled with Stubs! */
+#undef USE_TCL_STUBS
+#undef USE_TK_STUBS
 #include "tk.h"
 #include "locale.h"
 
