@@ -12,6 +12,9 @@
  * RCS: @(#) $Id$
  */
 
+/* Make sure this file is never compiled with Stubs! */
+#undef USE_TCL_STUBS
+#undef USE_TK_STUBS
 #include "tkInt.h"
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
